fix(material/slider): set word-break on value-indicator (#27709)
* fixes https://github.com/angular/components/issues/27612

(cherry picked from commit 3b25de95306f11a6ffb828769af331bb8c076652)

--- a/src/material/slider/slider.scss
+++ b/src/material/slider/slider.scss
@@ -72,6 +72,12 @@ $mat-slider-horizontal-margin: 8px !default;
     .mdc-slider__track--active_fill {
       transition-duration: 80ms;
     }
+
+    // Stop parent word-break from altering
+    // the word-break of the value indicator.
+    .mdc-slider__value-indicator {
+      word-break: normal;
+    }
   }
 
   .mdc-slider__track,
